syntax = "proto3";

package protobuf;

option go_package="github.com/ClickerAI/ClickerAI/proto";

service RobotGo {
  rpc MoveSmooth(MoveSmoothRequest) returns (MoveSmoothResponse) {}
  rpc MoveRelative(MoveRelativeRequest) returns (MoveRelativeResponse) {}
  rpc MoveSmoothRelative(MoveSmoothRelativeRequest) returns (MoveSmoothRelativeResponse) {}
  rpc GetMousePos(GetMousePosRequest) returns (GetMousePosResponse) {}
  rpc Click(ClickRequest) returns (ClickResponse) {}
  rpc Scroll(ScrollRequest) returns (ScrollResponse) {}
  rpc ScrollMouse(ScrollMouseRequest) returns (ScrollMouseResponse) {}
  rpc ScrollSmooth(ScrollSmoothRequest) returns (ScrollSmoothResponse) {}
  rpc ScrollRelative(ScrollRelativeRequest) returns (ScrollRelativeResponse) {}
  rpc MilliSleep(MilliSleepRequest) returns (MilliSleepResponse) {}
  rpc Sleep(SleepRequest) returns (SleepResponse) {}
  rpc CaptureScreen(CaptureScreenRequest) returns (CaptureScreenResponse) {}
  rpc CaptureGo(CaptureGoRequest) returns (CaptureGoResponse) {}
  rpc CaptureImg(CaptureImgRequest) returns (CaptureImgResponse) {}
  rpc Move(MoveRequest) returns (MoveResponse) {}
  rpc DragSmooth(DragSmoothRequest) returns (DragSmoothResponse) {}
}

message MoveSmoothRequest {
  int32 x = 1;
  int32 y = 2;
  repeated float args = 3;
}

message MoveSmoothResponse {
  bool success = 1;
}

message MoveRelativeRequest {
  int32 x = 1;
  int32 y = 2;
}

message MoveRelativeResponse {}

message MoveSmoothRelativeRequest {
  int32 x = 1;
  int32 y = 2;
  repeated float args = 3;
}

message MoveSmoothRelativeResponse {}

message GetMousePosRequest {}

message GetMousePosResponse {
  int32 x = 1;
  int32 y = 2;
}

message ClickRequest {
  repeated string args = 1;
}

message ClickResponse {}

message ScrollRequest {
  int32 x = 1;
  int32 y = 2;
  repeated int32 args = 3;
}

message ScrollResponse {}

message ScrollMouseRequest {
  int32 x = 1;
  repeated string direction = 2;
}

message ScrollMouseResponse {}

message ScrollSmoothRequest {
  int32 to = 1;
  repeated int32 args = 2;
}

message ScrollSmoothResponse {}

message ScrollRelativeRequest {
  int32 x = 1;
  int32 y = 2;
  repeated int32 args = 3;
}

message ScrollRelativeResponse {}

message MilliSleepRequest {
  int32 tm = 1;
}

message MilliSleepResponse {}

message SleepRequest {
  int32 tm = 1;
}

message SleepResponse {}

message CaptureScreenRequest {
  repeated int32 args = 1;
}

message CaptureScreenResponse {
  bytes bitmap = 1;
}

message CaptureGoRequest {
  repeated int32 args = 1;
}

message CaptureGoResponse {
  bytes bitmap = 1;
}

message CaptureImgRequest {
  repeated int32 args = 1;
}

message CaptureImgResponse {
  bytes image = 1;
}

message MoveRequest {
  int32 x = 1;
  int32 y = 2;
}

message MoveResponse {}

message DragSmoothRequest {
  int32 x = 1;
  int32 y = 2;
  repeated float args = 3;
}

message DragSmoothResponse {}
